<package>
<name>algriothm_platform</name>
<version>1.0.0</version>
<description>algorithm_platform: an algorithm_platform for both 2D and 3D perception</description>
<maintainer email="yaphetys@gmail.com">Xincheng.Yang</maintainer>
<license>GPLv2</license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>nav_msgs</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>tf</build_depend>
<build_depend>message_filters</build_depend>
<build_depend>message_generation</build_depend>
<build_depend>eigen_conversions</build_depend>
<build_depend>cv_bridge</build_depend>
<build_depend>image_transport</build_depend>


<run_depend>catkin</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>rospy</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>nav_msgs</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>tf</run_depend>
<run_depend>message_filters</run_depend>
<run_depend>message_generation</run_depend>
<run_depend>eigen_conversions</run_depend>
<run_depend>cv_bridge</run_depend>
<run_depend>image_transport</run_depend>
</package>
